# milvus-dataset

./: .gitignore  README.md  README_CN.md  ROADMAP.md  array_datamodel.py  compute_neighbors_demo.py  create_cohere_v3_10M_dataset.py  dataset-save-demo.py  gpt-4-o-demo.py  milvus_dataset_demo.py  milvus_dataset_writer_perf.py  milvus_schema_to_pydantic.py  part-00000.parquet  pyarrow_demo.py  pyproject.toml  schema_demo.py  to_milvus_demo.py
src/milvus_dataset/: __init__.py  core.py  embedding.py  generation.py  log_config.py  neighbors.py  reader.py  storage.py  vectordb.py  writer.py
src/milvus_dataset/embeddings/: dense.py  sparse.py
src/milvus_dataset/milvus/: operations.py
src/milvus_dataset/models/: milvus_schema_to_pydantic.py  pyarrow_demo.py  schema.py
src/milvus_dataset/operations/: neighbors.py
src/milvus_dataset/storage/: __init__.py  base.py  local.py  s3.py
src/milvus_dataset/utils/: distribution.py
tests/: example.parquet  parquet_demo.py  test_core.py  test_reader.py  test_writer.py
tests/testcases/: test_e2e.py
