[project]
name = "milvus-dataset"
version = "0.1.0"
description = "A package for managing datasets with Milvus integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "numba>=0.60.0",
    "numpy>=1.24.3",
    "scipy>=1.4.0",
    "scikit-learn>=1.5.1",
    "pymilvus>=2.0.0",
    "pydantic>=1.8.0",
    "boto3>=1.17.0",
    "pyarrow>=16.1.0",
    "filelock>=3.15.4",
    "dask[complete]>=2024.7.0",
    "grpcio>=1.63.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "s3fs>=2024.6.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
gpu = [
    "pylibraft-cu12>=24.8.1",
    "cupy-cuda12x>=13.3.0",
]
emb = [
    "transformers>=4.44.2",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.0.0",
]
lint = [
    "black>=20.8b1",
    "isort>=5.7.0",
    "mypy>=0.800",
]

[tool.pdm.scripts]
test = "pytest tests/"
lint = "black src/ tests/ && isort src/ tests/ && mypy src/"
